k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /java
            pathType: Prefix
            backend:
              service:
                name: java-service
                port:
                  number: 80
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: python-service
                port:
                  number: 80
